[package]
name = "solana-secp256k1-schnorr"
description = "Secp256k1 Schnorr signatures in SVM"
authors = ["Dean Little <@deanmlittle>"]
version = "0.2.0"
edition = "2021"
license = "MIT"

[features]
bip340 = []
keccak256 = []
sha256 = []
default = ["bip340", "keccak256", "sha256"]

[lib]

[dependencies]
solana-nostd-secp256k1-recover = "0.1.1"
solana-secp256k1 = "0.1.0"
solana-nostd-sha256 = "0.1.3"
solana-nostd-keccak = "0.1.3"